ADD: EndPoint GET_ID
